Add new methods to controller